tests/machine/x/go/group_by_sort.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by_sort.go:13:13: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:14:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:18:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:22:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:26:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:31:22: undefined: Grouped
tests/machine/x/go/group_by_sort.go:94:16: undefined: Grouped
tests/machine/x/go/group_by_sort.go:96:30: undefined: Grouped
